<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rating"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/rate_devops_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/helpMember"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_help_24"
        app:showAsAction="ifRoom"
        android:title="@string/help" />
</menu>