<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="#FA844E"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOnlineMessagingOption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#190F27"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearChatMeOnline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/android2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/online_chatting"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEmailingOption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#190F27"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearChatMeEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/gmail" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/email_chatting"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNormalSms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#190F27"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearChatMeMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_message_text_message" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/normal_sms"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.cardview.widget.CardView>